--- a/dp_app/include/UIs/PQDiagramTab.ui
+++ b/dp_app/include/UIs/PQDiagramTab.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>668</width>
-    <height>476</height>
+    <height>745</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -590,10 +590,16 @@
       </layout>
      </item>
      <item>
-      <widget class="PlotWidget" name="graphWidget">
+      <widget class="PlotWidget" name="PQGraph">
+       <property name="minimumSize">
+        <size>
+         <width>0</width>
+         <height>400</height>
+        </size>
+       </property>
        <property name="maximumSize">
         <size>
-         <width>750</width>
+         <width>16777215</width>
          <height>500</height>
         </size>
        </property>
